--- a/api_demo/garageplug/doctype/garageplug_settings/garageplug_settings.json
+++ b/api_demo/garageplug/doctype/garageplug_settings/garageplug_settings.json
@@ -9,6 +9,7 @@
  "field_order": [
   "client_id",
   "client_secret",
+  "token",
   "column_break_afpm",
   "x_location_id",
   "x_api_key"
@@ -37,12 +38,18 @@
    "fieldname": "x_api_key",
    "fieldtype": "Data",
    "label": "x_api_key"
+  },
+  {
+   "fieldname": "token",
+   "fieldtype": "Data",
+   "label": "Token",
+   "read_only": 1
   }
  ],
  "index_web_pages_for_search": 1,
  "issingle": 1,
  "links": [],
- "modified": "2024-06-09 10:46:52.387666",
+ "modified": "2024-08-08 09:48:58.461416",
  "modified_by": "Administrator",
  "module": "GaragePlug",
  "name": "GaragePlug Settings",
